example/src/snapshots/rust_sitter_example__words__tests__words_grammar-2.snap
---
source: example/src/words.rs
expression: "grammar::Words::parse(\"hello\")"
---
ParseResult {
    result: None,
    errors: [
        ParseError {
            node_position: Position {
                bytes: 0..5,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            error_position: Position {
                bytes: 0..5,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            lookaheads: [
                "Words_keyword",
                "source_file",
            ],
            reason: Error,
        },
        ParseError {
            node_position: Position {
                bytes: 5..5,
                start: Point {
                    line: 1,
                    column: 6,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            error_position: Position {
                bytes: 5..5,
                start: Point {
                    line: 1,
                    column: 6,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            lookaheads: [],
            reason: MissingNode {
                node_kind: "Words_word",
                type_name: "String",
            },
        },
    ],
}
