example/src/snapshots/rust_sitter_example__words__tests__words_grammar-3.snap
---
source: example/src/words.rs
expression: "grammar::parse(\"ifhello\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [],
            ),
            start_byte: 0,
            end_byte: 7,
            start_point: Point {
                line: 1,
                column: 1,
            },
            end_point: Point {
                line: 1,
                column: 8,
            },
            text: "ifhello",
            kind: "ERROR",
            parent_context: None,
        },
    ],
)
