example/src/snapshots/rust_sitter_example__words__tests__words_grammar.snap
---
source: example/src/words.rs
expression: "grammar::Words::parse(\"if\")"
---
ParseResult {
    result: None,
    errors: [
        ParseError {
            node_position: Position {
                bytes: 0..2,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 3,
                },
            },
            error_position: Position {
                bytes: 0..2,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 3,
                },
            },
            lookaheads: [],
            reason: Error,
        },
        ParseError {
            node_position: Position {
                bytes: 2..2,
                start: Point {
                    line: 1,
                    column: 3,
                },
                end: Point {
                    line: 1,
                    column: 3,
                },
            },
            error_position: Position {
                bytes: 2..2,
                start: Point {
                    line: 1,
                    column: 3,
                },
                end: Point {
                    line: 1,
                    column: 3,
                },
            },
            lookaheads: [],
            reason: MissingNode {
                node_kind: "Words_keyword",
                type_name: "String",
            },
        },
    ],
}
